force-app/main/default/objects/ccrz__E_AccountAddressBook__c/ccrz__E_AccountAddressBook__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>CC Account Address Book</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Account Address Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>