force-app/main/default/objects/ccrz__E_AccountAddressBook__c/fields/ccrz__AccountId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AccountId__c</fullName>
    <description>Account id in text form to work around account sharing issue</description>
    <label>AccountId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>