force-app/main/default/objects/ccrz__E_AccountAddressBook__c/fields/ccrz__AddressBookId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AddressBookId__c</fullName>
    <description>External Id for Address Book</description>
    <externalId>true</externalId>
    <label>Address Book Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>