force-app/main/default/objects/ccrz__E_AccountAddressBook__c/fields/ccrz__AddressType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AddressType__c</fullName>
    <description>Indicates which type of address correponds to the address book entry</description>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>