force-app/main/default/objects/ccrz__E_AccountAddressBook__c/fields/ccrz__Default__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to determine whether or not this address book entry is a default</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>