force-app/main/default/objects/ccrz__E_AccountAddressBook__c/fields/ccrz__E_ContactAddress__c.field-meta.xml
<CustomField>
    <fullName>ccrz__E_ContactAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Contact Address</label>
    <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
    <relationshipLabel>CC Address Books</relationshipLabel>
    <relationshipName>E_Account_Address_Books</relationshipName>
    <type>Lookup</type>
</CustomField>